# virtualenv_discovery_exclude_current

./: .activate.sh  .pre-commit-config.yaml  setup.cfg  virtualenv_discovery_exclude_current.py
