[metadata]
name = virtualenv_discovery_exclude_current
description = custom discovery that excludes current interpreter
author = Timmy Welch
author_email = timmy@narnian.us
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = virtualenv_discovery_exclude_current
install_requires =
    virtualenv>=20.22.0
python_requires = >=3.7

[options.entry_points]
virtualenv.discovery =
    monkeypatch = virtualenv_discovery_exclude_current:Mock

[tox:tox]
envlist = wheel

[testenv:wheel]
description = Generate wheel and tar.gz
labels =
    release
    build
skip_install = true
deps =
    build
commands_pre =
    -python -c 'import shutil,pathlib; \
    shutil.rmtree("./build/", ignore_errors=True); \
    shutil.rmtree("./dist/", ignore_errors=True)'
commands =
    python -m build

[testenv:pypi-upload]
description = Upload wheel to PyPi
platform = Linux
labels =
    release
skip_install = true
depends = wheel
deps =
    twine
passenv =
    TWINE_*
setenv =
    TWINE_NON_INTERACTIVE=true
commands =
    python -m twine upload dist/*.whl dist/*.tar.gz

[pep8]
ignore = E265,E501
max_line_length = 120

[flake8]
extend-ignore = E501, A003
max_line_length = 120

[coverage:run]
plugins = covdefaults

[coverage:report]
fail_under = 95

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
